Add 2 postgre&settings

--- a/django-backend/itproger1/news/templates/news/news1.html
+++ b/django-backend/itproger1/news/templates/news/news1.html
@@ -8,4 +8,5 @@
 <h1>{{ article.title }}</h1>
 <p>{{ article.date_published }}</p>
 <p>{{ article.content }}</p>
+<p>{{ article. }}</p>
 {% endblock %}
